--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,7 +22,6 @@ jobs:
     - name: Build UI
       run: cd ui && npm run build
     - name: Build the Docker Image
-      # run: docker build . --tag crypto-collector:$(date +%s)
       run: docker build . --tag crypto-collector
     - name: Build and push Docker images
       uses: docker/build-push-action@v1
@@ -30,4 +29,4 @@ jobs:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
         repository: harryoh/crypto-collector
-        tags: latest
+        tag_with_sha: true
