--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,7 +38,8 @@ jobs:
         password: ${{ secrets.PASSWORD }}
         port: ${{ secrets.PORT }}
         script: |
+          export PATH="$PATH:/usr/local/bin" && \
           cd ~/Work/crypto-collector && \
-          /usr/local/bin/docker-compose pull && \
-          /usr/local/bin/docker-compose down && \
-          /usr/local/bin/docker-compose up -d
+          docker-compose pull && \
+          docker-compose down && \
+          docker-compose up -d
