--- a/env.sample
+++ b/env.sample
@@ -1,4 +1,10 @@
-UpbitPeriodSeconds=5
-BithumbPeriodSeconds=6
-BybitPeriodSeconds=4
+UpbitPeriodSeconds=4
+BithumbPeriodSeconds=5
+BybitPeriodSeconds=3
 UsdKrwPeriodSeconds=600
+AlarmPeriodSeconds=10
+MonitorPeriodSeconds=10
+AlarmChatID=
+AlarmToken=
+MonitorChatID=
+MonitorToken=
