Fix environment on docker-compose

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,16 +7,15 @@ services:
     volumes:
       - .env:/opt/app/.env
     environment:
-      - UpbitPeriodSeconds: ${UpbitPeriodSeconds}
-      - BithumbPeriodSeconds: ${BithumbPeriodSeconds}
-      - BybitPeriodSeconds: ${BybitPeriodSeconds}
-      - UsdKrwPeriodSeconds: ${UsdKrwPeriodSeconds}
-      - AlarmPeriodSeconds: ${AlarmPeriodSeconds}
-      - AlarmPeriodSeconds: ${AlarmPeriodSeconds}
-      - MonitorPeriodSeconds: ${MonitorPeriodSeconds}
-      - AlarmChatID: ${AlarmChatID}
-      - AlarmToken: ${AlarmToken}
-      - MonitorChatID: ${MonitorChatID}
-      - MonitorToken: ${MonitorToken}
+      - UpbitPeriodSeconds=${UpbitPeriodSeconds}
+      - BithumbPeriodSeconds=${BithumbPeriodSeconds}
+      - BybitPeriodSeconds=${BybitPeriodSeconds}
+      - UsdKrwPeriodSeconds=${UsdKrwPeriodSeconds}
+      - AlarmPeriodSeconds=${AlarmPeriodSeconds}
+      - MonitorPeriodSeconds=${MonitorPeriodSeconds}
+      - AlarmChatID=${AlarmChatID}
+      - AlarmToken=${AlarmToken}
+      - MonitorChatID=${MonitorChatID}
+      - MonitorToken=${MonitorToken}
     ports:
       - 8080:8080
