--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,17 +33,6 @@ jobs:
         tags: latest
     - name: Deploy to Server
       uses: appleboy/ssh-action@master
-      env:
-        UpbitPeriodSeconds: ${{ secrets.UPBIT_PERIOD_SECONDS }}
-        BithumbPeriodSeconds: ${{ secrets.BITHUMB_PERIOD_SECONDS }}
-        BybitPeriodSeconds: ${{ secrets.BYBIT_PERIOD_SECONDS }}
-        UsdKrwPeriodSeconds: ${{ secrets.USDKRW_PERIOD_SECONDS }}
-        AlarmPeriodSeconds: ${{ secrets.ALARM_PERIOD_SECONDS }}
-        MonitorPeriodSeconds: ${{ secrets.MONITOR_PERIOD_SECONDS }}
-        AlarmChatID: ${{ secrets.ALARM_CHATID }}
-        AlarmToken: ${{ secrets.ALARM_TOKEN }}
-        MonitorChatID: ${{ secrets.MONITOR_CHATID }}
-        MonitorToken: ${{ secrets.MONITOR_TOKEN }}
       with:
         host: ${{ secrets.HOST }}
         username: ${{ secrets.USERNAME }}
@@ -53,6 +42,18 @@ jobs:
           security unlock-keychain -p ${{ secrets.PASSWORD }} && \
           export PATH="$PATH:/usr/local/bin" && \
           cd ~/Work/crypto-collector && \
+          git pull --ff-only && \
           docker-compose pull && \
           docker-compose down && \
+          rm -rf .env && \
+          echo UpbitPeriodSeconds=${{ secrets.UPBIT_PERIOD_SECONDS }} >> .env && \
+          echo BithumbPeriodSeconds=${{ secrets.BITHUMB_PERIOD_SECONDS }} >> .env && \
+          echo BybitPeriodSeconds=${{ secrets.BYBIT_PERIOD_SECONDS }} >> .env && \
+          echo UsdKrwPeriodSeconds=${{ secrets.USDKRW_PERIOD_SECONDS }} >> .env && \
+          echo AlarmPeriodSeconds=${{ secrets.ALARM_PERIOD_SECONDS }} >> .env && \
+          echo MonitorPeriodSeconds=${{ secrets.MONITOR_PERIOD_SECONDS }} >> .env && \
+          echo AlarmChatID=${{ secrets.ALARM_CHATID }} >> .env && \
+          echo AlarmToken=${{ secrets.ALARM_TOKEN }} >> .env && \
+          echo MonitorChatID=${{ secrets.MONITOR_CHATID }} >> .env && \
+          echo MonitorToken=${{ secrets.MONITOR_TOKEN }} >> .env && \
           docker-compose up -d
