--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,16 +6,16 @@ services:
     image: harryoh/crypto-collector
     volumes:
       - .env:/opt/app/.env
-    environment:
-      # - UpbitPeriodSeconds=${UpbitPeriodSeconds}
-      # - BithumbPeriodSeconds=${BithumbPeriodSeconds}
-      # - BybitPeriodSeconds=${BybitPeriodSeconds}
-      # - UsdKrwPeriodSeconds=${UsdKrwPeriodSeconds}
-      # - AlarmPeriodSeconds=${AlarmPeriodSeconds}
-      # - MonitorPeriodSeconds=${MonitorPeriodSeconds}
-      # - AlarmChatID=${AlarmChatID}
-      # - AlarmToken=${AlarmToken}
-      # - MonitorChatID=${MonitorChatID}
-      # - MonitorToken=${MonitorToken}
+    # environment:
+    #   - UpbitPeriodSeconds=${UpbitPeriodSeconds}
+    #   - BithumbPeriodSeconds=${BithumbPeriodSeconds}
+    #   - BybitPeriodSeconds=${BybitPeriodSeconds}
+    #   - UsdKrwPeriodSeconds=${UsdKrwPeriodSeconds}
+    #   - AlarmPeriodSeconds=${AlarmPeriodSeconds}
+    #   - MonitorPeriodSeconds=${MonitorPeriodSeconds}
+    #   - AlarmChatID=${AlarmChatID}
+    #   - AlarmToken=${AlarmToken}
+    #   - MonitorChatID=${MonitorChatID}
+    #   - MonitorToken=${MonitorToken}
     ports:
       - 8080:8080
