--- a/ui/package.json
+++ b/ui/package.json
@@ -8,9 +8,12 @@
     "@testing-library/react": "^10.4.9",
     "@testing-library/user-event": "^12.1.3",
     "axios": "^0.20.0",
+    "elliptic": "^6.5.3",
+    "http-proxy": "^1.18.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.3"
+    "react-scripts": "3.4.3",
+    "websocket-extensions": "^0.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
