--- a/env.sample
+++ b/env.sample
@@ -2,9 +2,12 @@ UpbitPeriodSeconds=4
 BithumbPeriodSeconds=5
 BybitPeriodSeconds=3
 UsdKrwPeriodSeconds=600
-AlarmPeriodSeconds=10
-MonitorPeriodSeconds=10
+MessagePeriodSeconds=10
 AlarmChatID=
 AlarmToken=
 MonitorChatID=
 MonitorToken=
+RulePlusMax=
+RulePlusMin=
+RuleMinusMax=
+RuleMinusMin=
