Add always start

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,6 +4,7 @@ services:
 
   server:
     image: harryoh/crypto-collector
+    restart: always
     volumes:
       - .env:/opt/app/.env
     # environment:
