--- a/env.sample
+++ b/env.sample
@@ -5,10 +5,7 @@ UsdKrwPeriodSeconds=600
 MessagePeriodSeconds=10
 AlarmChatID=
 AlarmToken=
-MonitorChatID=
-MonitorToken=
-RulePlusMax=
-RulePlusMin=
-RuleMinusMax=
-RuleMinusMin=
-CurrencyApiKey=
+RuleAlarmUse=false
+RuleAlarmMax=
+RuleAlarmMin=
+CurrencyAPIKey=
