--- a/env.sample
+++ b/env.sample
@@ -1,7 +1,7 @@
 UpbitPeriodSeconds=4
 BithumbPeriodSeconds=5
 BybitPeriodSeconds=3
-UsdKrwPeriodSeconds=600
+CurrencyPeriodSeconds=600
 MessagePeriodSeconds=10
 AlarmChatID=
 AlarmToken=
