Fix docker-compose file

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,6 +11,8 @@ services:
       - server
   server:
     image: harryoh/crypto-collector
+    build:
+      context: .
     restart: unless-stopped
     volumes:
       - .env:/opt/app/.env
