remove ui on github action

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,19 +8,19 @@ jobs:
   build:
     name: Build Server
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: [12.x]
+    # strategy:
+    #   matrix:
+    #     node-version: [20.x]
     steps:
     - uses: actions/checkout@v2
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v1
-      with:
-        node-version: ${{ matrix.node-version }}
-    - name: Install Nodejs Packages
-      run: cd ui && npm install
-    - name: Build UI
-      run: cd ui && npm run build
+    # - name: Use Node.js ${{ matrix.node-version }}
+    #   uses: actions/setup-node@v1
+    #   with:
+    #     node-version: ${{ matrix.node-version }}
+    # - name: Install Nodejs Packages
+    #   run: cd ui && yarn install
+    # - name: Build UI
+    #   run: cd ui && yarn run build
     - name: Build the Docker Image
       run: docker build . --tag crypto-collector
     - name: Build and push Docker images
