--- a/ui/.env.dev
+++ b/ui/.env.dev
@@ -3,4 +3,5 @@ ENV = 'development'
 
 # base api
 # VUE_APP_BASE_API = '/dev-api'
-VUE_APP_BASE_API = 'http://localhost:8080/api'
+# VUE_APP_BASE_API = 'http://localhost:8080/api'
+VUE_APP_BASE_API = 'https://m.search.naver.com/p/csearch/content/qapirender.nhn?key=calculator&pkid=141&q=%ED%99%98%EC%9C%A8&where=m&u1=keb&u6=standardUnit&u7=0&u3=USD&u4=KRW&u8=down&u2=1'
