--- a/ui/.env.prod
+++ b/ui/.env.prod
@@ -3,4 +3,5 @@ ENV = 'production'
 
 # base api
 # VUE_APP_BASE_API = '/prod-api'
-VUE_APP_BASE_API = 'https://crypto-api.5004.pe.kr/api'
+# VUE_APP_BASE_API = 'https://crypto-api.5004.pe.kr/api'
+VUE_APP_BASE_API = 'https://m.search.naver.com/p/csearch/content/qapirender.nhn?key=calculator&pkid=141&q=%ED%99%98%EC%9C%A8&where=m&u1=keb&u6=standardUnit&u7=0&u3=USD&u4=KRW&u8=down&u2=1'
